[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "richprint-pe"
version = "1.0.0"
description = "Decode and print Rich headers from Windows PE executables"
readme = "README.md"
license = "BSD-2-Clause"
requires-python = ">=3.8"
authors = [
    { name = "dishather", email = "noreply@github.com" }
]
keywords = ["pe", "executable", "rich-header", "windows", "compiler", "forensics"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Systems Administration",
]
dependencies = []

[project.scripts]
richprint = "richprint.cli:main"

[project.urls]
Homepage = "https://github.com/RogueValleyInformationSecurity/richprint-pe"
Repository = "https://github.com/RogueValleyInformationSecurity/richprint-pe"
Upstream = "https://github.com/dishather/richprint"

[tool.hatch.build.targets.wheel]
packages = ["src/richprint"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
]
